fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@
   background-color: #3d4251 !important;
 }
 ::-webkit-scrollbar {
-  background-color: #2e3440e3 !important
+  background-color: var(--sbg) !important
 }
 
 /* S T Y L E S */
